# emory-cci-fast-ia-gsoc

./: Installation.md  ListofAlgorithms.md  MorphReconPerformance.md  ParallelQueueTests.md  ProjectDecisions.md  ProjectHome.md  Resources.md  Watershed.md
fastIA-master/: CMakeLists.txt
fastIA-master/cmake_modules/: cl2cpp.cmake
fastIA-master/src/: CMakeLists.txt
fastIA-master/src/common/cuda/: cuda_errors.h
fastIA-master/src/features/: CMakeLists.txt
fastIA-master/src/segment/: CMakeLists.txt  MorphologicOperations.cpp  MorphologicOperationsGPU.cpp
fastIA-master/src/segment/cuda/: ccl_uf.cu  global_queue.cu  global_queue.cuh
fastIA-master/src/segment/opencl/: CMakeLists.txt  component_labeling.cpp  component_labeling.h  morph_recon.cpp  morph_recon.h  morph_recon_internal.h  parallel_queue.cpp  parallel_queue.h  pixel-ops.cpp  pixel-ops.h  watershed.cpp  watershed.h
fastIA-master/src/segment/opencl/kernels/: ComponentLabeling.cl  Divide.cl  Invert.cl  MorphRecon.cl  ParallelQueue.cl  Replace.cl  Threshold.cl  Watershed.cl
fastIA-master/src/segment/opencl/utils/: ocl_program_cache.cpp  ocl_program_cache.h  ocl_type_resolver.cpp  ocl_type_resolver.h  ocl_utils.cpp  ocl_utils.h
fastIA-master/src/segment/test/src/: imreconMulticore.cpp
fastIA-master/test/: CMakeLists.txt  TestUtils.h
fastIA-master/test/features/: CMakeLists.txt
fastIA-master/test/segment/: CMakeLists.txt  bwareopenTest2.cpp  cclTest.cpp  deconvTest.cpp  imfillTest.cpp  imreconChunkTest.cpp  morphReconCPUMulticoreTest.cpp  morphReconInitTest.cpp  morphReconPropagationTest.cpp  morphReconSpeedupTest.cpp  morphReconTest.cpp  oclTest.cpp  parallelQueueTest.cpp  pixel-opsTest.cpp  sample_test.cpp  watershedNewTest.cpp  watershedOclTest.cpp  watershedTest.cpp
fastIA-master/test/segment/cuda/: globalQueueTest.cu
fastIA-master/test/segment/opencl/: staticInitializer.cpp
fastIA-master/test/segment/opencl/kernels/: ParallelQueueTests.cl
trunk/fastIA-master/: CMakeLists.txt  README_QTCREATOR.txt
trunk/fastIA-master/cmake_modules/: cl2cpp.cmake
trunk/fastIA-master/src/common/: CMakeLists.txt
trunk/fastIA-master/src/segment/: CMakeLists.txt  MorphologicOperationsGPU.cpp  UtilsCVImageIO.cpp  UtilsCVImageIO.h
trunk/fastIA-master/src/segment/cuda/: CMakeLists.txt  global_queue.cu  global_queue.cuh  imreconstruct_int_kernel.cu
trunk/fastIA-master/src/segment/opencl/: CMakeLists.txt  component_labeling.cpp  component_labeling.h  morph_recon.cpp  morph_recon.h  parallel_queue.cpp  parallel_queue.h  pixel-ops.cpp  pixel-ops.h  watershed.cpp  watershed.h
trunk/fastIA-master/src/segment/opencl/kernels/: Bgr2gray.cl  ComponentLabeling.cl  HelloOpenCL.cl  Invert.cl  Mask.cl  MorphRecon.cl  ParallelQueue.cl  Threshold.cl  Watershed.cl
trunk/fastIA-master/src/segment/opencl/utils/: ocl_program_cache.cpp  ocl_program_cache.h  ocl_source_registry.cpp  ocl_source_registry.h  ocl_utils.cpp  ocl_utils.h
trunk/fastIA-master/src/segment/test/src/: bwareaopenTest.cpp
trunk/fastIA-master/test/: CMakeLists.txt  TestUtils.h
trunk/fastIA-master/test/features/: CMakeLists.txt  sample_test.cpp
trunk/fastIA-master/test/segment/: CMakeLists.txt  bwareopenTest.cpp  cclCudaTest.cpp  cclTest.cpp  distTransformTest.cpp  imreconChunkTest.cpp  morphReconCPUTest.cpp  morphReconInitTest.cpp  morphReconSpeedupTest.cpp  morphReconTest.cpp  oclTest.cpp  parallelQueueTest.cpp  pixel-opsTest.cpp  sample_test.cpp  watershedNewTest.cpp  watershedOpenCV.cpp  watershedTest.cpp
trunk/fastIA-master/test/segment/cuda/: globalQueueTest.cu
trunk/fastIA-master/test/segment/opencl/: staticInitializer.h
trunk/fastIA-master/test/segment/opencl/kernels/: ParallelQueueTests.cl
wiki/: Installation.wiki  ListofAlgorithms.wiki  MorphReconPerformance.wiki  PageName.wiki  ParallelQueueTests.wiki  ProjectDecisions.wiki  Resources.wiki  Watershed.wiki
